force-app/main/default/objects/CanalNotificacoesMinhasSolicitacoes__mdt/CanalNotificacoesMinhasSolicitacoes__mdt.object-meta.xml
<CustomObject>
    <label>Canal de Notificação Minhas Solicitações</label>
    <pluralLabel>Canal de Notificação Minhas Solicitações</pluralLabel>
</CustomObject>