force-app/main/default/objects/CanalNotificacoesMinhasSolicitacoes__mdt/fields/CallOut__c.field-meta.xml
<CustomField>
    <fullName>CallOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CallOut</label>
    <type>Checkbox</type>
</CustomField>