force-app/main/default/objects/CanalNotificacoesMinhasSolicitacoes__mdt/fields/FuncionalidadeControlada__c.field-meta.xml
<CustomField>
    <fullName>FuncionalidadeControlada__c</fullName>
    <description>A funcionalidade a qual o controle de canal se refere</description>
    <inlineHelpText>A funcionalidade a qual o controle de canal se refere</inlineHelpText>
    <label>Funcionalidade Controlada</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AtualizacaoStatusCaso</fullName>
                <label>Atualização de Status do Caso</label>
            </value>
            <value>
                <fullName>BotaoNotificarCliente</fullName>
                <label>Botão Notificar Cliente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>