force-app/main/default/objects/CanalNotificacoesMinhasSolicitacoes__mdt/fields/PushSMS__c.field-meta.xml
<CustomField>
    <fullName>PushSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push ou SMS</label>
    <type>Checkbox</type>
</CustomField>